--- a/frontend/excel-interface/src/app/page.module.css
+++ b/frontend/excel-interface/src/app/page.module.css
@@ -1,252 +1,177 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
+.title_bar {
+  width: 75%;
+  height: 20%;
+  padding: 30px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: gray;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition:
-    background 200ms,
-    border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
+.connect_button {
+  border-radius: 30px;
+  width: 15%;
 }
 
 .datatable {
-  width: 100%;
+  width: 75%;
+  height: 1000px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  border-color:red;
+
+  /* justify-content: center; */
   align-items: center;
+
 }
 
 .datatable table {
+  background-color: aquamarine;
   border: 2px solid forestgreen;
-  width: 800px;
-  height: 200px;
+  /* border-collapse: collapse; */
+  border-spacing: 0;
+  width: 100%;
+  color: black;
+  overflow: hidden;
+  border-radius:2em;
 }
+
 
 .datatable th {
-  border-bottom: 1px solid white;
+  border-bottom: 5px solid black;
+  border-right: 1px solid forestgreen;
+  border-left: 1px solid forestgreen;
+
+  height: 40px;
 }
 
-.datatable td {
+.datatable tr {
+  text-align: center;
+  border: 1px solid purple;
+  height: 40px;
+}
+
+.entry_row td {
+  text-align: center;
+  /* border-collapse: collapse; */
+  border: 1px solid forestgreen;
+  /* background-color: crimson; */
+  height: 40px;
+
+
+  /* border-radius: 30px; */
+}
+
+
+.addrow{
+  background-color: red;
+  /* box-shadow: 2px 2px 2px 2px gray;s */
+
+  border-bottom-left-radius:2em;
+  border-bottom-right-radius:2em;
+
+  height: 40px;
   text-align: center;
 }
 
-.center {
+.addrow td{
+  border-top: 1px solid forestgreen;
+}
+
+.newrow{
+  background-color: red;
+  /* box-shadow: 2px 2px 2px 2px gray;s */
+
+  border-bottom-left-radius:2em;
+  border-bottom-right-radius:2em;
+
+  height: 40px;
+  text-align: center;
+}
+
+.newrow td{
+  border-top: 1px solid forestgreen;
+  border-left: 1px solid forestgreen;
+  border-right: 1px solid forestgreen;
+
+}
+
+.query_col input {
+  /* background-color: black; */
+  width: 99%;
+  height: 35px;
+  text-align: center;
+}
+
+/* .addrow_button td{
+  border: 2px solid purple;
+} */
+
+.checkbox_col {
+  background-color: chocolate;
+}
+
+.id_col {
+  background-color: lemonchiffon;
+}
+
+.query_col {
+  background-color: darkorange;
+  width: 500px;
+}
+
+.date_col {
+  background-color: green;
+}
+
+/* .tr {
+  border-color:red;
+} */
+
+.toolbar {
+  width: 100%;
+  /* height: 40px; */
+  background-color: aqua;
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 20px;
+
+  border-radius: 25px;
+
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  flex-direction: row;
+  gap: 1%
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.toolbar_button {
+  background-color: azure;
+
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.toolbar_button:hover {
+  background-color: red;
 }
 
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.toolbar_button:active {
+  background-color: crimson;
 }
 
-.logo {
-  position: relative;
+.image {
+  /* background-color: blueviolet; */
+  width: 30px;
+  height: 30px;
+  object-fit: "contain";
 }
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.image svg{
+  fill: red
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
