--- a/frontend/excel-interface/src/app/page.module.css
+++ b/frontend/excel-interface/src/app/page.module.css
@@ -6,7 +6,7 @@
 }
 
 .title_bar {
-  width: 75%;
+  width: 100%;
   height: 20%;
   padding: 30px;
   display: flex;
@@ -21,12 +21,12 @@
 }
 
 .datatable {
-  width: 75%;
+  width: 90%;
   height: 1000px;
   display: flex;
   flex-direction: column;
   border-color:red;
-
+  /* border: 10px solid #555555; */
   /* justify-content: center; */
   align-items: center;
 
@@ -34,101 +34,125 @@
 
 .datatable table {
   background-color: aquamarine;
-  border: 2px solid forestgreen;
+  border: 2px solid #555555;
   /* border-collapse: collapse; */
   border-spacing: 0;
   width: 100%;
   color: black;
   overflow: hidden;
-  border-radius:2em;
+  border-radius:1em;
 }
 
 
 .datatable th {
-  border-bottom: 5px solid black;
-  border-right: 1px solid forestgreen;
-  border-left: 1px solid forestgreen;
+  background-color: #CCF9E6;
+  border-bottom: 5px solid #555555;
+  border-right: 1px solid #555555;
+  border-left: 1px solid #555555;
+  font-size: 14pt;
 
-  height: 40px;
+  height: 50px;
 }
 
 .datatable tr {
   text-align: center;
-  border: 1px solid purple;
-  height: 40px;
 }
 
 .entry_row td {
   text-align: center;
   /* border-collapse: collapse; */
-  border: 1px solid forestgreen;
+  border: 1px solid ;
   /* background-color: crimson; */
   height: 40px;
-
+  font-size: 14pt;
 
   /* border-radius: 30px; */
 }
 
 
 .addrow{
-  background-color: red;
+  background-color: #99DAFE;
   /* box-shadow: 2px 2px 2px 2px gray;s */
 
   border-bottom-left-radius:2em;
   border-bottom-right-radius:2em;
 
-  height: 40px;
-  text-align: center;
+  height: 50px;
 }
 
-.addrow td{
-  border-top: 1px solid forestgreen;
+.addrow_td{
+  /* back  border-right: 2px solid #555555;
+  border-left: 2px solid #555555;ground-color: #66C8FE; */
+  /* border-top: 5px solid #555555; */
+  height: 50px;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
 }
 
 .newrow{
-  background-color: red;
+  background-color: #33B6FE;
   /* box-shadow: 2px 2px 2px 2px gray;s */
 
   border-bottom-left-radius:2em;
   border-bottom-right-radius:2em;
 
-  height: 40px;
+  height: 50px;
   text-align: center;
+  align-items: center;
 }
 
 .newrow td{
-  border-top: 1px solid forestgreen;
-  border-left: 1px solid forestgreen;
-  border-right: 1px solid forestgreen;
-
+  /* background-color: #33B6FE; */
+  height: 50px;
+  align-items: center;
+  border-right: 1px solid #555555;
+  border-left: 1px solid #555555;
+  /* width: 500px */
 }
 
-.query_col input {
-  /* background-color: black; */
-  width: 99%;
-  height: 35px;
-  text-align: center;
-}
 
 /* .addrow_button td{
   border: 2px solid purple;
 } */
 
 .checkbox_col {
-  background-color: chocolate;
+  background-color: azure;
+  width: 5%;
 }
 
+.checkbox_col input, .datatable th input{
+  width: 20px;
+  height: 20px
+}
+
+
 .id_col {
-  background-color: lemonchiffon;
+  background-color: azure;
+  width: 10%;
 }
 
 .query_col {
-  background-color: darkorange;
-  width: 500px;
+  background-color: azure;
+  width: 75%;
 }
 
+.query_col input {
+  /* background-color: black; */
+  width: 99.5%;
+  height: 40px;
+  text-align: center;
+  border-radius: 10px;
+
+  font-size: 14pt;
+}
+
+
 .date_col {
-  background-color: green;
+  background-color: azure;
+  width: 10%;
 }
 
 /* .tr {
@@ -137,13 +161,13 @@
 
 .toolbar {
   width: 100%;
-  /* height: 40px; */
-  background-color: aqua;
+  height: 50px;
+  background-color: #99DAFE;
   padding: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
   padding-left: 20px;
-
+  align-items: center;
   border-radius: 25px;
 
   display: flex;
@@ -151,27 +175,54 @@
   gap: 1%
 }
 
-.toolbar_button {
-  background-color: azure;
+.confirm_div {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
 
+.toolbar_button {
+  background-color: inherit;
+  border-radius: 30px;
+  width: 0px;
+  height: 0px;
+  margin: 20px;
+  padding: 0px;
+  position: relative;
+  background-color:#adadad;
+
+  transition: padding  0.05s ease-in-out,
+              margin   0.05s ease-in-out;
 }
 
 .toolbar_button:hover {
-  background-color: red;
+  padding: 20px;
+  margin: 0px;
+  /* transform: scale(2); */
+  background-color:#66C8FE;
 }
 
+
 .toolbar_button:active {
-  background-color: crimson;
+  background-color: #DDDDDD;
 }
 
 .image {
   /* background-color: blueviolet; */
   width: 30px;
   height: 30px;
-  object-fit: "contain";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+
+  /* animation: in 4s linear 0s infinite normal; */
 }
-.image svg{
-  fill: red
-}
+
+/* .image:hover{
+  background-color: red;
+} */
+
 
 
