--- a/frontend/excel-interface/src/app/page.module.css
+++ b/frontend/excel-interface/src/app/page.module.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: gray;
+  background-color: #FEBD99;
 }
 
 .connect_button {
@@ -75,7 +75,7 @@
 }
 
 .addrow{
-  background-color: #99DAFE;
+  background-color: #b8e5fe;
   /* box-shadow: 2px 2px 2px 2px gray;s */
 
   border-bottom-left-radius:2em;
@@ -171,7 +171,7 @@
 .toolbar {
   width: 100%;
   height: 50px;
-  background-color: #99DAFE;
+  background-color: #b8e5fe;
   padding: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
