--- a/frontend/excel-interface/src/app/page.module.css
+++ b/frontend/excel-interface/src/app/page.module.css
@@ -1,4 +1,10 @@
 .main {
+  position: relative;
+}
+
+.maindiv {
+  left: 50%;
+  top: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -280,3 +286,25 @@
 /* .image:hover{
   background-color: red;
 } */
+
+.errordialog {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+
+  width: 300px;
+  height: 50px;
+  background-color: #ff0000;
+  /* padding: 10px; */
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  /* padding-left: 20px; */
+  align-items: center;
+  border-radius: 25px;
+
+  display: flex;
+  flex-direction: row;
+  gap: 1%;
+  justify-content: space-around;
+}
