--- a/frontend/excel-interface/src/app/page.module.css
+++ b/frontend/excel-interface/src/app/page.module.css
@@ -286,42 +286,6 @@
     z-index: 2;
 }
 
-/* .menu input{
-    background-color: white;
-    height: 40px;
-    width: 75%;
-
-    border-radius: 10px;
-    font-size: 14pt;
-    color: #777777;
-    background-color: white;
-} */
-
-.menu > li {
-    margin: 0;
-
-    background-color: white;
-}
-
-.menu > li:hover {
-    background-color: lightgray;
-}
-
-.menu > li > button {
-    width: 100%;
-    height: 100%;
-    text-align: left;
-
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 5px;
-    margin: 0;
-    font: inherit;
-    cursor: pointer;
-    /* overflow: hidden; */
-}
-
 /* .image:hover{
   background-color: red;
 } */
@@ -333,19 +297,63 @@
 
     width: 300px;
     height: 100px;
-    background-color: #ff0000;
+    border: 1px solid grey;
+    background-color: #ffffff;
     /* padding: 10px; */
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
+    margin: 20px;
     /* padding-left: 20px; */
     align-items: center;
-    border-radius: 25px;
+    border-radius: 15px;
 
     display: flex;
     flex-direction: row;
     gap: 1%;
     justify-content: space-around;
+}
+
+.notif_right {
+    /* background-color: #000000; */
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 5%;
+    align-items: flex-end;
+    justify-content: space-around;
+}
+
+.notif_right > p {
+    /* background-color: #000000; */
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.notif_icon {
+    background-color: inherit;
+    width: 0px;
+    height: 0px;
+    margin: 20px;
+
+    padding: 20px;
+    position: relative;
+}
+
+.notif_button {
+    border-radius: 10px;
+    margin-bottom: 7px;
+    margin-right: 7px;
+
+    padding: 5px;
+    background-color: #33b6fe;
+    cursor: default;
+}
+
+.notif_button:hover {
+    /* transform: scale(2); */
+    background-color: #66c8fe;
+}
+
+.notif_button:active {
+    background-color: #dddddd;
 }
 
 .connectDialog {
