--- a/frontend/excel-interface/src/app/page.module.css
+++ b/frontend/excel-interface/src/app/page.module.css
@@ -208,8 +208,9 @@
 }
 
 .confirm_div {
+    /* margin: 20px; */
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
 }
@@ -238,6 +239,16 @@
 
 .toolbar_button:active {
     background-color: #dddddd;
+}
+
+.toolbar_slash {
+    background-color: inherit;
+    width: 0px;
+    height: 0px;
+    margin: 0px;
+
+    padding: 5px;
+    position: relative;
 }
 
 .image {
@@ -308,22 +319,25 @@
     display: flex;
     flex-direction: row;
     gap: 1%;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .notif_right {
     /* background-color: #000000; */
-    width: fit-content;
-    height: fit-content;
+    width: 70%;
+    height: 100%;
+    /* height: fit-content; */
     display: flex;
     flex-direction: column;
     gap: 5%;
     align-items: flex-end;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .notif_right > p {
-    /* background-color: #000000; */
+    /* background-color: #AA0000; */
+    width: 100%;
+    height: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -341,7 +355,8 @@
     border-radius: 10px;
     margin-bottom: 7px;
     margin-right: 7px;
-
+    width: 70px;
+    height: 30px;
     padding: 5px;
     background-color: #33b6fe;
     cursor: default;
