--- a/frontend/excel-interface/src/app/page.module.css
+++ b/frontend/excel-interface/src/app/page.module.css
@@ -124,12 +124,16 @@
 
 @keyframes slideInFromLeft {
     0% {
-        transform: translateY(-70%);
+        transform-origin: top;
+        transform: scaleY(0.1);
+        /* height: 0px; */
         z-index: 0;
         overflow: hidden;
     }
     100% {
-        transform: translateY(0);
+        transform-origin: top;
+        /* height: 50px; */
+        transform: scaleY(1);
         z-index: 0;
         overflow: hidden;
     }
@@ -218,7 +222,8 @@
 .query_col textarea {
     /* background-color: black; */
     width: 75%;
-    height: 100px;
+    height: 150px;
+    resize: none;
     /* height: 40px; */
     padding: 10px;
     /* text-align: center; */
@@ -409,7 +414,7 @@
 .menu {
     position: absolute;
     top: 50%;
-    left: -50%;
+    left: -25%;
     /* top: 100%;
     left: 100%; */
     /* list-style-type: none;
