--- a/frontend/excel-interface/src/app/page.module.css
+++ b/frontend/excel-interface/src/app/page.module.css
@@ -408,7 +408,7 @@
     width: 300px;
     height: 100px;
     /* border: 1px solid #CCECFE; */
-    background-color: #ffffff;
+    background-color: #baffd1;
     /* padding: 10px; */
     margin: 20px;
     /* padding-left: 20px; */
@@ -419,7 +419,30 @@
     flex-direction: row;
     gap: 1%;
     justify-content: space-between;
-    box-shadow: 0 0 4px 2px #ccecfe;
+    box-shadow: 0 0 4px 2px #3fff7f;
+    z-index: 0;
+}
+
+.errordialog {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+
+    width: 300px;
+    height: 100px;
+    /* border: 1px solid #CCECFE; */
+    background-color: #fabcba;
+    /* padding: 10px; */
+    margin: 20px;
+    /* padding-left: 20px; */
+    align-items: center;
+    border-radius: 15px;
+
+    display: flex;
+    flex-direction: row;
+    gap: 1%;
+    justify-content: space-between;
+    box-shadow: 0 0 4px 2px #f68d8b;
     z-index: 0;
 }
 
